[tool.poetry]
name = "vamas"
version = "0.1.0"
description = "Python package to read vamas (.vms) files"
authors = ["Matthias Krinninger"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.960"
black = "^22.3.0"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
preview = true
