[tool.poetry]
name = "vamas"
version = "0.1.0"
description = "Python package to read vamas (.vms) files"
authors = ["Matthias Krinninger <matkrin@protonmail.com>"]
license = "BSD-3-Clause"
homepage = "https://github.com/matkrin/vamas"
documentation = "https://matkrin.github.io/vamas"
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
include = ["vamas/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.960"
black = "^22.3.0"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 79
preview = true

[tool.mypy]
show_error_codes = true
