[project]
name = "vamas"
version = "0.1.1"
description = "Python package to read vamas (.vms) files"
authors = [{ name = "Matthias Krinninger", email = "matkrin@protonmail.com" }]
license = { text = "BSD-3-Clause" }
requires-python = "<4.0,>=3.7"
dependencies = []
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.urls]
homepage = "https://github.com/matkrin/vamas"
documentation = "https://matkrin.github.io/vamas"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest<8.0.0,>=7.1.2",
    "mypy<1.0,>=0.960",
    "Sphinx<6.0.0,>=5.0.2",
    "sphinx-rtd-theme<2.0.0,>=1.0.0",
    "ruff>=0.8.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
format = { docstring-code-format = true }

[tool.mypy]
show_error_codes = true
